stage 1; fixed font, anims

--- a/index.html
+++ b/index.html
@@ -13,51 +13,25 @@
   </head>
   <body>
     <div class="container">
-      <a href="chocolate.html">
-        <div class="icFlav"><p>Chocolate</p></div>
-      </a>
-      <a href="Vanilla.html">
-        <div class="icFlav"><p>Vanilla</p></div>
-      </a>
-      <a href="Strawberry.html">
-        <div class="icFlav"><p>Strawberry</p></div>
-      </a>
-      <a href="Mint.html">
-        <div class="icFlav"><p>Mint</p></div>
-      </a>
-      <a href="Pistachio.html">
-        <div class="icFlav"><p>Pistachio</p></div>
-      </a>
-      <a href="Raspberry.html">
-        <div class="icFlav"><p>Raspberry</p></div>
-      </a>
+      <div style="color: transparent">lol</div>
+      <div class="icFlav">
+        <a href="chocolate.html">Chocolate</a>
+      </div>
+      <div class="icFlav">
+        <a href="chocolate.html">Vanilla</a>
+      </div>
+      <div class="icFlav">
+        <a href="chocolate.html">Strawberry</a>
+      </div>
+      <div class="icFlav">
+        <a href="chocolate.html">Mint</a>
+      </div>
+      <div class="icFlav">
+        <a href="chocolate.html">Pistachio</a>
+      </div>
+      <div class="icFlav">
+        <a href="chocolate.html">Raspberry</a>
+      </div>
     </div>
-    <style>
-      .icFlav {
-        position: relative;
-        width: 1600px;
-        height: 1600px;
-        text-align: center;
-        font-size: 200px;
-        font-family: "indie flower", cursive;
-        cursor: pointer;
-        border-radius: 50%;
-        margin-bottom: 200px;
-        background-image: url(polka.jpg);
-      }
-      P {
-        padding-top: 200px;
-      }
-      a {
-        text-decoration: none;
-        color: black;
-      }
-      a:visited {
-        color: black;
-      }
-      a:hover {
-        color: black;
-      }
-    </style>
   </body>
 </html>
