new anim font workings

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
       href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Reenie+Beanie&family=Schoolbell&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="style.css" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -13,24 +18,24 @@
   </head>
   <body>
     <div class="container">
-      <div style="color: transparent">lol</div>
+      <div style="color: transparent">.</div>
       <div class="icFlav">
-        <a href="chocolate.html">Chocolate</a>
+        <a href="chocolate.html">chocolate</a>
       </div>
       <div class="icFlav">
-        <a href="chocolate.html">Vanilla</a>
+        <a href="chocolate.html">vanilla</a>
       </div>
       <div class="icFlav">
-        <a href="chocolate.html">Strawberry</a>
+        <a href="chocolate.html">strawberry</a>
       </div>
       <div class="icFlav">
-        <a href="chocolate.html">Mint</a>
+        <a href="chocolate.html">mint</a>
       </div>
       <div class="icFlav">
-        <a href="chocolate.html">Pistachio</a>
+        <a href="chocolate.html">pistachio</a>
       </div>
       <div class="icFlav">
-        <a href="chocolate.html">Raspberry</a>
+        <a href="chocolate.html">raspberry</a>
       </div>
     </div>
   </body>
