troll svg experimentation

--- a/index.html
+++ b/index.html
@@ -19,23 +19,18 @@
   <body>
     <div class="container">
       <div style="color: transparent">.</div>
-      <div class="icFlav">
+      <div class="iCr">
         <a href="chocolate.html">chocolate</a>
       </div>
-      <div class="icFlav">
+      <div class="iCr1">
         <a href="chocolate.html">vanilla</a>
       </div>
-      <div class="icFlav">
+      <div class="iCr2">
         <a href="chocolate.html">strawberry</a>
       </div>
-      <div class="icFlav">
+      <div class="iCr3">
         <a href="chocolate.html">mint</a>
       </div>
-      <div class="icFlav">
-        <a href="chocolate.html">pistachio</a>
-      </div>
-      <div class="icFlav">
-        <a href="chocolate.html">raspberry</a>
       </div>
     </div>
   </body>
