--- a/index.html
+++ b/index.html
@@ -10,8 +10,18 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="style.css" />
-    <meta charset="UTF-8" />
+    <link
+      rel="stylesheet"
+      href="styleLap.css"
+      media="screen and (device-height:768px)"
+    />
+    <link
+      rel="stylesheet"
+      href="stylePC.css"
+      media="screen and (device-height:1080px)"
+      <meta
+      charset="UTF-8"
+    />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ice Cream App</title>
@@ -30,7 +40,6 @@
       </div>
       <div class="iCr3">
         <a href="chocolate.html">mint</a>
-      </div>
       </div>
     </div>
   </body>
