--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
       <div class="iCr">
         <a href="chocolate.html">chocolate</a>
       </div>
-      <div class="iCr1">
+      <div class="iCr">
         <a href="chocolate.html">vanilla</a>
       </div>
-      <div class="iCr2">
+      <div class="iCr">
         <a href="chocolate.html">strawberry</a>
       </div>
-      <div class="iCr3">
+      <div class="iCr">
         <a href="chocolate.html">mint</a>
       </div>
     </div>
