all res issues fixed, fonts IDs added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
       href="https://fonts.googleapis.com/css2?family=Reenie+Beanie&family=Schoolbell&display=swap"
       rel="stylesheet"
     />
-
     <link
       rel="stylesheet"
       href="styleLap.css"
@@ -19,8 +18,6 @@
       rel="stylesheet"
       href="stylePC.css"
       media="screen and (device-height:1080px)"
-      <meta
-      charset="UTF-8"
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -30,16 +27,16 @@
     <div class="container">
       <div style="color: transparent">.</div>
       <div class="iCr">
-        <a href="chocolate.html">chocolate</a>
+        <a href="chocolate.html" id="choc">chocolate</a>
       </div>
       <div class="iCr">
-        <a href="chocolate.html">vanilla</a>
+        <a href="chocolate.html" id="van">vanilla</a>
       </div>
       <div class="iCr">
-        <a href="chocolate.html">strawberry</a>
+        <a href="chocolate.html" id="straw">strawberry</a>
       </div>
       <div class="iCr">
-        <a href="chocolate.html">mint</a>
+        <a href="chocolate.html" id="straw">mint</a>
       </div>
     </div>
   </body>
