--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap"
       rel="stylesheet"
@@ -19,8 +21,6 @@
       href="stylePC.css"
       media="screen and (device-height:1080px)"
     />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ice Cream App</title>
   </head>
   <body>
@@ -36,7 +36,7 @@
         <a href="chocolate.html" id="straw">strawberry</a>
       </div>
       <div class="iCr">
-        <a href="chocolate.html" id="straw">mint</a>
+        <a href="chocolate.html" id="mint">mint</a>
       </div>
     </div>
   </body>
