anims broken, bgs done (pc res only)

--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
   <body>
     <div class="container">
       <div style="color: transparent">.</div>
-      <div class="iCr">
-        <a href="chocolate.html" id="choc">chocolate</a>
+      <div class="iCr" id="chock1">
+        <a href="chocolate.html" id="chock">chocolate</a>
       </div>
-      <div class="iCr">
+      <div class="iCr" id="van1">
         <a href="chocolate.html" id="van">vanilla</a>
       </div>
-      <div class="iCr">
+      <div class="iCr" id="straw1">
         <a href="chocolate.html" id="straw">strawberry</a>
       </div>
-      <div class="iCr">
+      <div class="iCr" id="mint1">
         <a href="chocolate.html" id="mint">mint</a>
       </div>
     </div>
