--- a/index.html
+++ b/index.html
@@ -11,12 +11,21 @@
       href="https://fonts.googleapis.com/css2?family=Reenie+Beanie&family=Schoolbell&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="styleLap.css"
+      media="screen and (device-height:768px)"
+    />
+    <link
+      rel="stylesheet"
+      href="stylePC.css"
+      media="screen and (device-height:1080px)"
+    />
     <title>Ice Cream App</title>
   </head>
   <body>
     <div class="container">
-      <div class="trans" style="color: transparent">.</div>
+      <div style="color: transparent">.</div>
       <div class="iCr" id="chock1">
         <a href="chocolate.html" id="chock">chocolate</a>
       </div>
